Prevent <code> text from being affected by text-transform and letter-spacing

--- a/less/basic.less
+++ b/less/basic.less
@@ -22,6 +22,8 @@ code {
 	background: #f0f0f0;
 	font-family: "Consolas", "Menlo", "Monaco", "Source Code Pro", monospace;
 	font-size: 0.9em;
+	letter-spacing: 0;
+	text-transform: none;
 
 	.dark & {
 		background: #666;
